@@ -1,0 +1,22 @@
+<?xml version="1.0"?>
+<!DOCTYPE Policy SYSTEM "http://www.debian.org/debsig/1.0/policy.dtd">
+<Policy xmlns="http://www.debian.org/debsig/1.0/">
+
+  <!-- This is mainly a sanity check, since our filename is that of the ID
+       anyway. -->
+  <Origin Name="Debsig" id="FAD46790DE88C7E2" Description="Debsig testing"/>
+
+  <!-- This is required to match in order for this policy to be used. We
+       reject the release Type, since we want a different rule set for
+       that. -->
+  <Selection>
+    <Required Type="origin" File="pubring.gpg" id="FAD46790DE88C7E2"/>
+  </Selection>
+
+  <!-- Once we decide to use this policy, this must pass in order to verify
+       the package. -->
+  <Verification MinOptional="0">
+    <Required Type="origin" File="pubring.gpg" id="FAD46790DE88C7E2"/>
+  </Verification>
+
+</Policy>
